--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "googleapis": "^149.0.0",
-    "next": "14.0.4",
+    "next": "^15.3.3",
+    "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
